@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libjwc_f
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libjwc_f/ChangeLog,v 1.1 2010/02/02 21:43:49 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libjwc_f/ChangeLog,v 1.2 2010/03/29 19:34:27 jlec Exp $
+
+  29 Mar 2010; Justin Lecher <jlec@gentoo.org> libjwc_f-1.1-r1.ebuild:
+  Keyworded for ~x86-linux ~amd64-linux
 
 *libjwc_f-1.1-r1 (02 Feb 2010)
 
